Added profile page

--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>TrophyquestWebapp</title>
+  <title>TrophyQuest</title>
   <base href="/">
-  <link rel="icon" type="image/png" href="assets/icons/trophyquest-icon-32.png?v=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="assets/icons/trophyquest-icon-32.png?v=1" rel="icon" type="image/png">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
