--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>TrophyQuest</title>
-  <base href="/">
-  <link href="assets/icons/trophyquest-icon-32.png?v=1" rel="icon" type="image/png">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>TrophyQuest</title>
+    <base href="/">
+    <link href="assets/icons/trophyquest-icon-32.png?v=1" rel="icon" type="image/png">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-<app-root></app-root>
+<tq-root></tq-root>
 </body>
 </html>
